# OpenGL_Practice

./: CMakeLists.txt  basic_lighting_diffuse.cpp  basic_lighting_specular.cpp  basic_lighting_specular_imgui_integrated.cpp  c_plus_plus_test.cpp  colors.cpp  learn_camera.cpp  learn_camera_temp.cpp  learn_camera_temp2.cpp  learn_camera_temp3.cpp  learn_coordinate.cpp  learn_coordinate_temp.cpp  learn_coordinate_temp2.cpp  learn_shader.cpp  learn_shader_temp.cpp  learn_shader_temp2.cpp  learn_texture.cpp  learn_texture_temp.cpp  learn_transformation.cpp  my_imgui_demo.cpp  one_triangle.cpp  test.cpp  two_triangle.cpp
demo_src/lighting/light_casters/: light_casters_directional.cpp  light_casters_point.cpp  light_casters_spot_soft.cpp
demo_src/lighting/lighting_maps/: lighting_maps_specular.cpp
demo_src/lighting/materials/: materials.cpp
demo_src/lighting/multiple_lights/: multiple_lights.cpp
demo_src/model_loading/: model_loading.cpp
glad_header/glad/: glad.h
glad_src/: glad.c
header/: camera.h  mesh.h  model.h  shader.h
imgui/: imgui_impl_opengl3.h
shader_source/: 4.1.texture.fs
shader_source/model_loading/: 1.model_loading.fs
